--- a/app/src/main/res/layout/person_info_concern_bottom_bar.xml
+++ b/app/src/main/res/layout/person_info_concern_bottom_bar.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
+    android:layout_height="@dimen/person_info_bottom_bar_height"
+    android:layout_gravity="bottom"
+    android:background="@color/white"
+    android:orientation="horizontal"
+    android:id="@+id/person_info_bottom_bar"
     >
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
+
+    <LinearLayout
+        android:id="@+id/person_info_concern"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
+        android:background="@drawable/ripple_bg_transpant"
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView9"
+            android:id="@+id/person_info_concern_icon"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_marginBottom="8dp"
@@ -24,14 +30,51 @@
             app:srcCompat="@drawable/icon_user_follow" />
 
         <TextView
-            android:id="@+id/textView6"
-            android:gravity="center_vertical"
+            android:id="@+id/person_info_concern_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/concern"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:text="@string/concern" />
     </LinearLayout>
-</RelativeLayout>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/light_gray" />
+
+    <LinearLayout
+        android:id="@+id/person_info_private_letter"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:background="@drawable/ripple_bg_transpant"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/person_info_private_letter_icon"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            app:srcCompat="@drawable/icon_message_selected" />
+
+        <TextView
+            android:id="@+id/person_info_private_letter_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:text="@string/private_letter" />
+    </LinearLayout>
+</LinearLayout>
