修改个人设置头像修改后即时更新，以及个人资料卡的一点小bug

--- a/app/src/main/res/layout-v21/activity_person_info.xml
+++ b/app/src/main/res/layout-v21/activity_person_info.xml
@@ -176,7 +176,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/light_gray"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:paddingBottom="@dimen/person_info_bottom_bar_height"
         />
