--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/FullToStatusBarTheme">
+    android:theme="@style/FullToStatusBarTheme"
+    >
 
     <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,49 +13,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/person_info_bg"
-        android:paddingTop="25dp"
         app:elevation="0dp"
         tools:context="com.sunny.youyun.activity.person_info.PersonInfoActivity">
 
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:fitsSystemWindows="true"
+            app:collapsedTitleGravity="center_horizontal"
+            app:expandedTitleGravity="center_horizontal"
+            app:contentScrim="@color/application_theme_color"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:statusBarScrim="@android:color/transparent"
+            >
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/img_info_background"
                 android:orientation="vertical"
-                app:layout_collapseMode="parallax">
-
-                <com.sunny.youyun.views.EasyBar
-                    android:id="@+id/easyBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/bar_item_height"
-                    android:background="@color/transparent"
-                    app:icon_size="20dp"
-                    app:left_text="@string/back"
-                    app:right_text="@string/sure"
-                    app:title_color="@color/white"
-                    app:title_size="17sp">
-
-
-                </com.sunny.youyun.views.EasyBar>
+                android:adjustViewBounds="true"
+                android:fitsSystemWindows="true"
+                android:layout_marginTop="25dp"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7"
+                >
 
                 <ImageView
                     android:id="@+id/img_icon"
-                    android:layout_width="74dp"
-                    android:layout_height="74dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="12dp"
-                    android:background="@drawable/avatar_circle_bg"
-                    android:padding="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/icon_logo_round" />
-
 
                 <TextView
                     android:id="@+id/tv_name"
@@ -74,12 +69,12 @@
                     android:id="@+id/img_edit"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
                     android:src="@drawable/icon_mine_info_edit"
                     app:layout_constraintBottom_toTopOf="@id/tv_name"
                     app:layout_constraintStart_toEndOf="@id/tv_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_name"
+                    android:layout_marginLeft="16dp" />
 
                 <View
                     android:id="@+id/divide_line"
@@ -96,7 +91,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
                     android:text="关注  0"
                     android:textColor="@color/white"
                     android:textSize="11sp"
@@ -104,13 +98,13 @@
                     app:layout_constraintEnd_toStartOf="@id/divide_line"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
+                    app:layout_constraintTop_toBottomOf="@id/divide_line"
+                    android:layout_marginRight="16dp" />
 
                 <TextView
                     android:id="@+id/fans_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
                     android:text="粉丝  0"
                     android:textColor="@color/white"
@@ -119,7 +113,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toEndOf="@id/divide_line"
-                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
+                    app:layout_constraintTop_toBottomOf="@id/divide_line"
+                    android:layout_marginLeft="16dp" />
 
                 <TextView
                     android:id="@+id/tv_signature"
@@ -134,6 +129,31 @@
 
 
             </android.support.constraint.ConstraintLayout>
+            <android.support.v7.widget.Toolbar
+                app:layout_collapseMode="pin"
+                android:layout_width="match_parent"
+                android:paddingTop="25dp"
+                app:contentInsetLeft="0dp"
+                app:contentInsetStart="0dp"
+                app:contentInsetEnd="0dp"
+                app:contentInsetRight="0dp"
+                android:layout_height="80dp">
+
+            </android.support.v7.widget.Toolbar>
+            <com.sunny.youyun.views.EasyBar
+                android:id="@+id/easyBar"
+                android:gravity="top"
+                app:layout_collapseMode="pin"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bar_item_height"
+                android:background="@color/transparent"
+                android:layout_marginTop="25dp"
+                app:icon_size="20dp"
+                app:left_text="@string/back"
+                app:right_text="@string/sure"
+                app:title_color="@color/white"
+                app:title_size="17sp">
+            </com.sunny.youyun.views.EasyBar>
         </android.support.design.widget.CollapsingToolbarLayout>
 
         <android.support.design.widget.TabLayout
@@ -149,23 +169,18 @@
 
         </android.support.design.widget.TabLayout>
 
-        <include layout="@layout/divide_item" />
+        <include layout="@layout/divide_item"/>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="wrap_content"
+        android:background="@color/light_gray"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:paddingBottom="@dimen/person_info_bottom_bar_height"
+        />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white" />
-
-    </android.support.v4.widget.NestedScrollView>
-
+    <include layout="@layout/person_info_concern_bottom_bar"/>
 
 </android.support.design.widget.CoordinatorLayout>
