--- a/app/src/main/res/layout/fragment_youyun_qrdialog.xml
+++ b/app/src/main/res/layout/fragment_youyun_qrdialog.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:id="@+id/img_qr"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="250dp"
+        android:layout_height="250dp" />
 
 </FrameLayout>
