--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -9,6 +9,7 @@
         <item name="android:windowActionBar">false</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <!--&lt;!&ndash;设置状态栏的颜色&ndash;&gt;-->
         <!--<item name="android:windowTranslucentStatus">true</item>-->
     </style>
@@ -23,4 +24,5 @@
         <item name="android:windowTranslucentStatus">true</item>
         <!-- Customize your theme here. -->
     </style>
+
 </resources>
