设置导航栏透明

--- a/app/src/main/res/layout/activity_person_file_manager.xml
+++ b/app/src/main/res/layout/activity_person_file_manager.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".activity.person_file_manager.person_file_manager_index.PersonFileManagerActivity">
 
     <include layout="@layout/bar_item"/>
