--- a/app/src/main/res/layout/activity_upload_setting.xml
+++ b/app/src/main/res/layout/activity_upload_setting.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/light_gray"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.activity.upload_setting.UploadSettingActivity">
 
     <include layout="@layout/bar_item" />
