--- a/app/src/main/res/layout/activity_base_recycler_view.xml
+++ b/app/src/main/res/layout/activity_base_recycler_view.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.base.activity.BaseRecyclerViewActivity">
 
     <include layout="@layout/bar_item"/>
