--- a/app/src/main/res/layout/activity_clip_image.xml
+++ b/app/src/main/res/layout/activity_clip_image.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.activity.clip.ClipImageActivity">
 
     <include layout="@layout/bar_item"/>
