--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.activity.download.DownloadActivity">
 
     <include
