--- a/app/src/main/res/layout/activity_file_detail_off_line.xml
+++ b/app/src/main/res/layout/activity_file_detail_off_line.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
+    android:fitsSystemWindows="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <include layout="@layout/bar_item"/>
