--- a/app/src/main/res/layout/activity_file_detail_online.xml
+++ b/app/src/main/res/layout/activity_file_detail_online.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.activity.file_detail_online.FileDetailOnlineActivity">
 
     <include layout="@layout/bar_item" />
