--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/application_theme_color"
+    android:background="@color/light_gray"
     android:clipToPadding="true"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
