--- a/app/src/main/res/layout/activity_person_setting.xml
+++ b/app/src/main/res/layout/activity_person_setting.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/light_gray"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.activity.person_setting.PersonSettingActivity">
 
     <include layout="@layout/bar_item"/>
