--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.sunny.youyun.activity.scan.ScanActivity">
 
     <com.sunny.youyun.views.QRScan.zxing.ZXingView xmlns:android="http://schemas.android.com/apk/res/android"
