修改个人资料卡闪退问题，以及添加他人资料卡底部bar随AppBarLayout滚动效果

--- a/app/src/main/res/layout/person_info_concern_bottom_bar.xml
+++ b/app/src/main/res/layout/person_info_concern_bottom_bar.xml
@@ -6,6 +6,7 @@
     android:layout_gravity="bottom"
     android:background="@color/white"
     android:orientation="horizontal"
+    app:layout_behavior="com.sunny.youyun.views.behavior.MyBottomBarBehavior"
     android:id="@+id/person_info_bottom_bar"
     >
 
