--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -10,9 +10,9 @@
         android:background="@color/application_theme_color"
         android:id="@+id/easyBar"
         app:title="优云"
-        app:icon_size="20dp"
+        app:icon_size="@dimen/bar_item_height"
         app:title_size="17sp"
-        app:icon_margin="12dp"
+        app:icon_margin="17.5dp"
         app:left_text="@string/back"
         app:right_text="@string/sure"
         app:title_color="@color/white"
