修改按文件类型查看云上文件

--- a/app/src/main/res/layout/activity_person_file_list.xml
+++ b/app/src/main/res/layout/activity_person_file_list.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.person_file_manager.person_file_list.PersonFileListActivity">
+    tools:context=".activity.person_file_manager.person_file_type.PersonFileListTypeActivity">
 
 </android.support.constraint.ConstraintLayout>
