--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/FullToStatusBarTheme"
-    >
+    android:theme="@style/FullToStatusBarTheme">
 
     <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,23 +21,21 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:collapsedTitleGravity="center_horizontal"
-            app:expandedTitleGravity="center_horizontal"
             app:contentScrim="@color/application_theme_color"
+            app:expandedTitleGravity="center_horizontal"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-            app:statusBarScrim="@android:color/transparent"
-            >
+            app:statusBarScrim="@android:color/transparent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/img_info_background"
-                android:orientation="vertical"
-                android:adjustViewBounds="true"
-                android:fitsSystemWindows="true"
                 android:layout_marginTop="25dp"
+                android:adjustViewBounds="true"
+                android:background="@drawable/img_info_background"
+                android:fitsSystemWindows="true"
+                android:orientation="vertical"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"
-                >
+                app:layout_collapseParallaxMultiplier="0.7">
 
                 <ImageView
                     android:id="@+id/img_icon"
@@ -69,12 +66,12 @@
                     android:id="@+id/img_edit"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
                     android:src="@drawable/icon_mine_info_edit"
                     app:layout_constraintBottom_toTopOf="@id/tv_name"
                     app:layout_constraintStart_toEndOf="@id/tv_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_name"
-                    android:layout_marginLeft="16dp" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <View
                     android:id="@+id/divide_line"
@@ -91,6 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
                     android:text="关注  0"
                     android:textColor="@color/white"
                     android:textSize="11sp"
@@ -98,13 +96,13 @@
                     app:layout_constraintEnd_toStartOf="@id/divide_line"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/divide_line"
-                    android:layout_marginRight="16dp" />
+                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
 
                 <TextView
                     android:id="@+id/fans_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
                     android:text="粉丝  0"
                     android:textColor="@color/white"
@@ -113,8 +111,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toEndOf="@id/divide_line"
-                    app:layout_constraintTop_toBottomOf="@id/divide_line"
-                    android:layout_marginLeft="16dp" />
+                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
 
                 <TextView
                     android:id="@+id/tv_signature"
@@ -129,49 +126,51 @@
 
 
             </android.support.constraint.ConstraintLayout>
+
             <android.support.v7.widget.Toolbar
-                app:layout_collapseMode="pin"
                 android:layout_width="match_parent"
+                android:layout_height="80dp"
                 android:paddingTop="25dp"
-                app:contentInsetLeft="0dp"
-                app:contentInsetStart="0dp"
                 app:contentInsetEnd="0dp"
+                app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
-                android:layout_height="80dp">
+                app:contentInsetStart="0dp"
+                app:layout_collapseMode="pin">
 
             </android.support.v7.widget.Toolbar>
+
             <com.sunny.youyun.views.EasyBar
-                android:background="@color/transparent"
                 android:id="@+id/easyBar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bar_item_height"
                 android:layout_gravity="top"
-                app:layout_collapseMode="pin"
                 android:layout_marginTop="25dp"
-                app:icon_size="@dimen/bar_item_height"
-                app:title_size="17sp"
+                android:background="@color/transparent"
                 app:icon_margin="17.5dp"
+                app:icon_size="@dimen/bar_item_height"
+                app:layout_collapseMode="pin"
                 app:left_text="@string/back"
                 app:right_text="@string/sure"
                 app:title_color="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/bar_item_height">
+                app:title_size="17sp">
 
             </com.sunny.youyun.views.EasyBar>
         </android.support.design.widget.CollapsingToolbarLayout>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/white"
-        app:tabIndicatorColor="@color/application_theme_color"
-        app:tabIndicatorHeight="3dp"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/white"
+            app:tabIndicatorColor="@color/application_theme_color"
+            app:tabIndicatorHeight="3dp"
             app:tabMode="scrollable"
             app:tabSelectedTextColor="@color/application_theme_color"
             app:tabTextColor="@color/text_gray">
 
         </android.support.design.widget.TabLayout>
 
-        <include layout="@layout/divide_item"/>
+        <include layout="@layout/divide_item" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
@@ -182,6 +181,6 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
-    <include layout="@layout/person_info_concern_bottom_bar"/>
+    <include layout="@layout/person_info_concern_bottom_bar" />
 
 </android.support.design.widget.CoordinatorLayout>
