--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,4 +49,5 @@
     <dimen name="message_icon_size">44dp</dimen>
     <dimen name="finding_search_et_height">25dp</dimen>
     <dimen name="person_info_bottom_bar_height">38dp</dimen>
+    <dimen name="person_file_path_item_height">50dp</dimen>
 </resources>
