--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:layout_scrollFlags="scroll|enterAlways"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.sunny.youyun.views.EasyBar
