--- a/app/src/main/res/layout/person_info_concern_bottom_bar.xml
+++ b/app/src/main/res/layout/person_info_concern_bottom_bar.xml
@@ -65,7 +65,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical"
-            app:srcCompat="@drawable/icon_message_selected" />
+            app:srcCompat="@drawable/icon_user_chat" />
 
         <TextView
             android:id="@+id/person_info_private_letter_text"
