修改文件详情布局

--- a/app/src/main/res/layout/file_detail_online.xml
+++ b/app/src/main/res/layout/file_detail_online.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     >
 
 
     <TextView
         android:id="@+id/tv_file_name_size"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:gravity=""
         android:text="文件名.pdf(1.0M)"
         android:textColor="@color/text_gray"
         android:textSize="14sp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="266dp" />
+        app:layout_constraintEnd_toStartOf="@+id/img_qr_code"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/img_icon"
+        app:layout_constraintTop_toTopOf="@+id/img_icon"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="12dp" />
 
     <ImageView
         android:id="@+id/img_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="22dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pdf"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_file_name_size"
-        tools:layout_editor_absoluteY="105dp" />
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:id="@+id/tv_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:gravity="center"
         android:text="提取码：000000"
         android:textColor="@color/text_gray"
-        android:textSize="24sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/img_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="321dp" />
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/img_icon"
+        app:layout_constraintTop_toBottomOf="@+id/tv_file_name_size"
+        android:layout_marginLeft="12dp" />
 
     <com.sunny.youyun.views.RichText
         android:id="@+id/rt_view_count"
@@ -112,13 +110,14 @@
         style="?borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="38dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="0dp"
         android:background="@drawable/btn_bg_gray"
-        android:text="查看评论"
+        android:text="@string/look_comment"
         android:textColor="@color/white"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView7" />
@@ -138,18 +137,32 @@
         android:id="@+id/btn_download_now"
         style="?borderlessButtonStyle"
         android:layout_width="0dp"
-        android:layout_height="38dp"
+        android:layout_height="36dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/btn_bg"
-        android:text="立即下载"
+        android:text="@string/download_now"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="@+id/textView7"
+        tools:layout_editor_absoluteY="175dp" />
+
+    <ImageView
+        android:id="@+id/img_qr_code"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/img_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_icon"
+        app:srcCompat="@drawable/icon_file_code"
+        android:layout_marginRight="30dp" />
+
 
 </android.support.constraint.ConstraintLayout>
