修复二维码展示的动态授权问题

--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -25,6 +25,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
+        android:gravity="start"
         android:background="@mipmap/img_dialog_gray"
         android:maxWidth="250dp"
         android:paddingLeft="15dp"
