--- a/app/src/main/res/layout/finding_search_view_window.xml
+++ b/app/src/main/res/layout/finding_search_view_window.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,7 +14,6 @@
         <com.sunny.youyun.views.RichEditText
             android:id="@+id/et_search"
             android:layout_width="0dp"
-            android:focusable="true"
             android:layout_height="@dimen/finding_search_et_height"
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
@@ -21,25 +21,34 @@
             android:layout_marginRight="10dp"
             android:layout_marginStart="12dp"
             android:gravity="center_vertical"
+            android:focusableInTouchMode="true"
+            android:inputType="text"
+            android:enabled="true"
+            android:focusable="true"
             android:paddingLeft="8dp"
             android:drawablePadding="5dp"
             app:drawable_src="@drawable/icon_search_gray"
             app:drawable_width="20dp"
             app:drawable_height="20dp"
             android:layout_weight="1"
+            android:imeOptions="actionSearch"
             android:background="@drawable/finding_search_et_bg"
             android:hint="@string/search_hint"
             android:textSize="12sp"
-            android:paddingStart="8dp" />
+            android:paddingStart="8dp"
+            android:textColor="@color/text_gray"
+            tools:ignore="RtlSymmetry" />
 
-        <ImageView
+        <TextView
             android:id="@+id/img_search"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:src="@drawable/icon_search" />
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:text="@string/cancel" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
