--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="?selectableItemBackground"
+    android:background="@drawable/ripple_bg_white"
     android:layout_height="@dimen/file_info_item_height">
 
     <ImageView
