--- a/app/src/main/res/layout/youyun_edit_dialog.xml
+++ b/app/src/main/res/layout/youyun_edit_dialog.xml
@@ -19,7 +19,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginStart="44dp" />
 
     <TextView
         android:id="@+id/tv_sure"
@@ -60,6 +61,8 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/normal_inout_bg"
         android:ems="10"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
         android:gravity="center"
         android:inputType="number"
         android:padding="5dp"
