--- a/app/src/main/res/layout/item_file_trans_record.xml
+++ b/app/src/main/res/layout/item_file_trans_record.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="66dp"
-    android:background="?selectableItemBackground">
+    android:background="@drawable/ripple_bg_white">
 
     <ImageView
         android:id="@+id/img_icon"
