--- a/app/src/main/res/layout/activity_file_detail_online.xml
+++ b/app/src/main/res/layout/activity_file_detail_online.xml
@@ -23,6 +23,7 @@
         >
 
         <android.support.v7.widget.RecyclerView
+            android:transitionName="@string/share_finding_item"
             android:id="@+id/recyclerView_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
