--- a/app/src/main/res/layout/finding_item.xml
+++ b/app/src/main/res/layout/finding_item.xml
@@ -4,6 +4,7 @@
     android:layout_margin="10dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp"
+    android:transitionName="@string/share_finding_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
